generate html file

--- a/lab1/notebook.ipynb
+++ b/lab1/notebook.ipynb
@@ -5236,6 +5236,28 @@
    "source": [
     "shap.plots.force(shap_values[2, :])"
    ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-15T23:34:56.831384Z",
+     "start_time": "2025-03-15T23:34:52.055188Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!jupyter nbconvert notebook.ipynb --to html",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook notebook.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 8 image(s).\n",
+      "[NbConvertApp] Writing 1178935 bytes to notebook.html\n"
+     ]
+    }
+   ],
+   "execution_count": 53
   }
  ],
  "metadata": {
