--- a/lab2/notebook.ipynb
+++ b/lab2/notebook.ipynb
@@ -2274,10 +2274,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skfp.datasets.moleculenet import load_muv, load_ogb_splits\n",
+    "\n",
+    "x_raw, y_matrix = load_muv()\n",
+    "x_raw = np.array(x_raw)\n",
+    "\n",
+    "itrain, ivalid, itest = load_ogb_splits(\"MUV\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_raw = np.append(x_raw[itrain], x_raw[ivalid])\n",
+    "X_test_raw = x_raw[itest]\n",
+    "\n",
+    "y_train_matrix = np.vstack([y_matrix[itrain], y_matrix[ivalid]])\n",
+    "y_test_matrix = y_matrix[itest]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VirtualScreening:\n",
+    "    def __init__(self, fingerprint, metric_func):\n",
+    "        self.fingerprint = fingerprint\n",
+    "        self.metric_func = metric_func\n",
+    "\n",
+    "    def fit(self, X_train, y_train):\n",
+    "        X_train_fp = self.fingerprint.fit_transform(X_train)\n",
+    "        self.X_train_active_fp = X_train_fp[y_train.astype(np.int8) == 1]\n",
+    "\n",
+    "    def predict(self, X_test):\n",
+    "        X_test_fp = self.fingerprint.fit_transform(X_test)\n",
+    "        return np.array([self._similarity(test_sample) for test_sample in X_test_fp])\n",
+    "\n",
+    "    def _similarity(self, test_sample):\n",
+    "        return np.array(\n",
+    "            [\n",
+    "                self.metric_func(test_sample, train_sample)\n",
+    "                for train_sample in self.X_train_active_fp\n",
+    "            ]\n",
+    "        ).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------\n",
+      "Target: 0\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.0\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.0\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 1\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.5429603297847632\n",
+      "\t\tEnrichment: 3.312015503875969\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.5429603297847632\n",
+      "\t\tEnrichment: 3.312015503875969\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 2\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.15251521451951883\n",
+      "\t\tEnrichment: 5.650793650793651\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.15251521451951883\n",
+      "\t\tEnrichment: 5.650793650793651\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 3\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.4723642504936843\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.4723642504936843\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 4\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.00829636772202695\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.00829636772202695\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 5\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.028543353740155\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.028543353740155\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 6\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.04602000031697761\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.04602000031697761\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 7\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.00354674959658902\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.00354674959658902\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 8\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 1.9458292135549275e-08\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 1.9458292135549275e-08\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 9\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 3.847898241446464e-07\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 3.847898241446464e-07\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 10\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.07725353471550754\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.07725353471550754\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 11\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.10328812388794714\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.10328812388794714\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 12\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.0\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.0\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 13\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 1.0000000000000038\n",
+      "\t\tEnrichment: 19.89041095890411\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 1.0000000000000038\n",
+      "\t\tEnrichment: 19.89041095890411\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 14\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.33782509278666545\n",
+      "\t\tEnrichment: 6.658008658008658\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.33782509278666545\n",
+      "\t\tEnrichment: 6.658008658008658\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 15\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.01134888561277037\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.01134888561277037\n",
+      "\t\tEnrichment: 0.0\n",
+      "---------------------------------------------------------------------------\n",
+      "Target: 16\n",
+      "\tBinary fingerprint\n",
+      "\t\tBedrock: 0.0020524177010122074\n",
+      "\t\tEnrichment: 0.0\n",
+      "\tCount fingerprint\n",
+      "\t\tBedrock: 0.0020524177010122074\n",
+      "\t\tEnrichment: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skfp.fingerprints import ECFPFingerprint\n",
+    "from skfp.distances import tanimoto_count_similarity, tanimoto_binary_similarity\n",
+    "from skfp.metrics import bedroc_score, enrichment_factor\n",
+    "\n",
+    "virtual_screening = VirtualScreening(ECFPFingerprint(), tanimoto_binary_similarity)\n",
+    "virtual_screening_count = VirtualScreening(\n",
+    "    ECFPFingerprint(count=True), tanimoto_count_similarity\n",
+    ")\n",
+    "\n",
+    "for i in range(0, y_train_matrix.shape[1]):\n",
+    "    y_train = y_train_matrix[:, i]\n",
+    "    y_test = y_test_matrix[:, i]\n",
+    "\n",
+    "    X_train = np.array(X_train_raw)[~np.isnan(y_train)]\n",
+    "    X_test = np.array(X_test_raw)[~np.isnan(y_test)]\n",
+    "\n",
+    "    y_train = y_train[~np.isnan(y_train)]\n",
+    "    y_test = y_test[~np.isnan(y_test)]\n",
+    "\n",
+    "    virtual_screening.fit(X_train, y_train)\n",
+    "    virtual_screening_count.fit(X_train, y_train)\n",
+    "\n",
+    "    y_pred = virtual_screening.predict(X_test)\n",
+    "    y_pred_count = virtual_screening_count.predict(X_test)\n",
+    "\n",
+    "    indices_sorted = np.argsort(y_pred)[::-1]\n",
+    "    indices_sorted_count = np.argsort(y_pred_count)[::-1]\n",
+    "\n",
+    "    X_test_binary_sorted = X_test[indices_sorted]\n",
+    "    X_test_count_sorted = X_test[indices_sorted]\n",
+    "\n",
+    "    print(\"---------------------------------------------------------------------------\")\n",
+    "    print(f\"Target: {i}\")\n",
+    "    print(\"\\tBinary fingerprint\")\n",
+    "    print(\n",
+    "        f\"\\t\\tBedrock: {bedroc_score(y_test[indices_sorted], y_pred[indices_sorted], alpha=20)}\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"\\t\\tEnrichment: {enrichment_factor(y_test[indices_sorted], y_pred[indices_sorted_count], fraction=0.05)}\"\n",
+    "    )\n",
+    "    print(\"\\tCount fingerprint\")\n",
+    "    print(\n",
+    "        f\"\\t\\tBedrock: {bedroc_score(y_test[indices_sorted], y_pred[indices_sorted], alpha=20)}\"\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"\\t\\tEnrichment: {enrichment_factor(y_test[indices_sorted], y_pred[indices_sorted_count], fraction=0.05)}\"\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
