--- a/lab2/notebook.ipynb
+++ b/lab2/notebook.ipynb
@@ -83,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lukasz\\AppData\\Local\\Temp\\ipykernel_14224\\2756931748.py:1: DtypeWarning: Columns (5,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\lukasz\\AppData\\Local\\Temp\\ipykernel_17476\\2756931748.py:1: DtypeWarning: Columns (5,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"codon_usage.csv\")\n"
      ]
     },
@@ -597,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.loc[df[\"Ncodons\"] > 1000]"
+    "df = df[df[\"Ncodons\"] > 1000]"
    ]
   },
   {
@@ -606,7 +606,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.loc[df[\"Kingdom\"] != \"plm\"]"
+    "df = df[df[\"Kingdom\"] != \"plm\"]"
    ]
   },
   {
@@ -627,7 +627,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lukasz\\AppData\\Local\\Temp\\ipykernel_14224\\3271682657.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\lukasz\\AppData\\Local\\Temp\\ipykernel_17476\\3271682657.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df = df.replace(\n"
      ]
     }
@@ -1177,7 +1177,7 @@
      "output_type": "stream",
      "text": [
       "Optimal number of neighbors: 1\n",
-      "Tuning time: 49.33 s\n",
+      "Tuning time: 46.63 s\n",
       "F1 train: 100.00%\n",
       "F1 test: 89.11%\n"
      ]
@@ -1251,7 +1251,7 @@
      "output_type": "stream",
      "text": [
       "Optimal number of neighbors: 6\n",
-      "Tuning time: 165.95 s\n",
+      "Tuning time: 183.04 s\n",
       "F1 train: 100.00%\n",
       "F1 test: 90.56%\n"
      ]
@@ -1279,7 +1279,7 @@
    ],
    "source": [
     "param_grid = {\n",
-    "    \"n_neighbors\": list(range(5, 25)),\n",
+    "    \"n_neighbors\": list(range(5, 26)),\n",
     "    \"metric\": [\"euclidean\", \"manhattan\", \"cosine\"],\n",
     "    \"weights\": [\"distance\", None],\n",
     "}\n",
@@ -1416,10 +1416,10 @@
      "output_type": "stream",
      "text": [
       "Scikit-learn training time: 0.00\n",
-      "PyNNDescent training time: 34.74\n",
+      "PyNNDescent training time: 34.56\n",
       "\n",
-      "Scikit-learn prediction time: 0.23\n",
-      "PyNNDescent prediction time: 0.18\n",
+      "Scikit-learn prediction time: 0.22\n",
+      "PyNNDescent prediction time: 0.17\n",
       "\n",
       "Scikit-learn F1: 89.50%\n",
       "PyNNDescent F1: 89.45%\n"
@@ -1462,10 +1462,10 @@
      "output_type": "stream",
      "text": [
       "Scikit-learn training time: 0.01\n",
-      "PyNNDescent training time: 14.07\n",
+      "PyNNDescent training time: 13.80\n",
       "\n",
-      "Scikit-learn prediction time: 0.43\n",
-      "PyNNDescent prediction time: 0.22\n",
+      "Scikit-learn prediction time: 0.44\n",
+      "PyNNDescent prediction time: 0.21\n",
       "\n",
       "Scikit-learn F1: 89.67%\n",
       "PyNNDescent F1: 89.64%\n"
@@ -1533,9 +1533,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:896: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:896: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1615,9 +1615,9 @@
     }
    ],
    "source": [
-    "_, y_train_counts = np.unique_counts(hiv_y_train)\n",
-    "_, y_valid_counts = np.unique_counts(hiv_y_valid)\n",
-    "_, y_test_counts = np.unique_counts(hiv_y_test)\n",
+    "_, y_train_counts = np.unique(hiv_y_train, return_counts=True)\n",
+    "_, y_valid_counts = np.unique(hiv_y_valid, return_counts=True)\n",
+    "_, y_test_counts = np.unique(hiv_y_test, return_counts=True)\n",
     "\n",
     "print(\"Train labels\")\n",
     "plt.bar([\"0\", \"1\"], y_train_counts)\n",
@@ -1633,16 +1633,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AUROC używamy dlatego, że jest to metryka uwzględniająca niezbalansowane liczby klas w zbiorze treningowym i testowym (wzór na auroc uwzględna każdy rodzaj błędu, TN, FP, FN)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[23:00:26] WARNING: not removing hydrogen atom without neighbors\n",
-      "[23:00:26] WARNING: not removing hydrogen atom without neighbors\n"
+      "[15:37:16] WARNING: not removing hydrogen atom without neighbors\n",
+      "[15:37:16] WARNING: not removing hydrogen atom without neighbors\n"
      ]
     }
    ],
@@ -1676,14 +1683,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuning time: 0.00 s\n"
+      "Tuning time: 0.01 s\n"
      ]
     },
     {
@@ -1691,7 +1698,13 @@
      "output_type": "stream",
      "text": [
       "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\sklearn\\metrics\\pairwise.py:2466: DataConversionWarning: Data was converted to boolean for metric jaccard\n",
-      "  warnings.warn(msg, DataConversionWarning)\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\sklearn\\metrics\\pairwise.py:2466: DataConversionWarning: Data was converted to boolean for metric jaccard\n",
       "  warnings.warn(msg, DataConversionWarning)\n"
      ]
@@ -1700,8 +1713,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time: 84.96 s\n",
-      "AUROC test: 71.63%\n"
+      "Prediction time: 89.36 s\n",
+      "AUROC test: 71.29%\n"
      ]
     }
    ],
@@ -1729,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1755,7 +1768,7 @@
      "output_type": "stream",
      "text": [
       "Optimal number of neighbors: 10\n",
-      "Tuning time: 258.26 s\n"
+      "Tuning time: 239.63 s\n"
      ]
     },
     {
@@ -1772,8 +1785,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time: 88.39 s\n",
-      "AUROC test: 74.88%\n"
+      "Prediction time: 88.45 s\n",
+      "AUROC test: 74.87%\n"
      ]
     }
    ],
@@ -1818,7 +1831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podczas treningu utworzyła się struktura danych, która radzi sobie całkiem nieźle. \n",
+    "Podczas treningu nie utworzyła się żadna struktura danych, czas treningu trwa 0.00s, a czas predykcji jest dosyć długi.\n",
     "\n",
     "Model plasuje się mniej więcej w średniej wartości AUROC wśród modeli przedstawionych w artykule. Jest to całkiem niezły wynik jak na dosyć prosty model."
    ]
@@ -1835,9 +1848,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time: 0.00 s\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1852,28 +1872,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scikit-learn training time: 0.01\n",
-      "PyNNDescent training time: 23.82\n",
-      "\n",
-      "Scikit-learn prediction time: 79.24\n",
-      "PyNNDescent prediction time: 2.91\n",
-      "\n",
-      "Scikit-learn F1: 61.36%\n",
-      "PyNNDescent F1: 62.08%\n"
+      "Prediction time: 77.50 s\n",
+      "AUROC test: 74.27%\n"
      ]
     }
    ],
    "source": [
     "knn_classifier = KNeighborsClassifier(metric=\"jaccard\", n_neighbors=10, n_jobs=-1)\n",
     "\n",
+    "start = time()\n",
+    "knn_classifier.fit(hiv_train_fp, hiv_y_train)\n",
+    "end = time()\n",
+    "\n",
+    "print(f\"Training time: {end - start:.2f} s\")\n",
+    "\n",
+    "start = time()\n",
+    "y_pred_test = knn_classifier.predict_proba(hiv_test_fp)[:, 1]\n",
+    "end = time()\n",
+    "\n",
+    "print(f\"Prediction time: {end - start:.2f} s\")\n",
+    "\n",
+    "auroc_test = roc_auc_score(hiv_y_test, y_pred_test, average=\"macro\")\n",
+    "print(f\"AUROC test: {100 * auroc_test:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time: 22.67 s\n",
+      "Prediction time: 2.64 s\n",
+      "AUROC test: 70.94%\n"
+     ]
+    }
+   ],
+   "source": [
     "ann_classifier = make_pipeline(\n",
     "    PyNNDescentTransformer(metric=\"jaccard\", random_state=0),\n",
     "    KNeighborsClassifier(metric=\"precomputed\"),\n",
     ")\n",
     "\n",
-    "benchmark_knn_and_ann(\n",
-    "    knn_classifier, ann_classifier, hiv_train_fp, hiv_test_fp, hiv_y_train, hiv_y_test\n",
-    ")"
+    "start = time()\n",
+    "ann_classifier.fit(hiv_train_fp, hiv_y_train)\n",
+    "end = time()\n",
+    "\n",
+    "print(f\"Training time: {end - start:.2f} s\")\n",
+    "\n",
+    "start = time()\n",
+    "y_pred_test = ann_classifier.predict_proba(hiv_test_fp)[:, 1]\n",
+    "end = time()\n",
+    "print(f\"Prediction time: {end - start:.2f} s\")\n",
+    "\n",
+    "auroc_test = roc_auc_score(hiv_y_test, y_pred_test, average=\"macro\")\n",
+    "print(f\"AUROC test: {100 * auroc_test:.2f}%\")"
    ]
   },
   {
@@ -1947,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1965,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +2041,7 @@
        "Name: path, Length: 342878, dtype: object"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2066,13 +2122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b73dcdffe77f476fb89488a8878195e7",
+       "model_id": "253c1c3962c441e186d2ef72e5675a09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2090,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2151,14 +2214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pynndescent.pynndescent_.NNDescent object at 0x000002313D3A3E90>\n"
+      "<pynndescent.pynndescent_.NNDescent object at 0x0000026AA958F690>\n"
      ]
     },
     {
@@ -2178,14 +2241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pynndescent.pynndescent_.NNDescent object at 0x000002313D3A3E90>\n"
+      "<pynndescent.pynndescent_.NNDescent object at 0x0000026AA958F690>\n"
      ]
     },
     {
@@ -2205,14 +2268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pynndescent.pynndescent_.NNDescent object at 0x000002313D3A3E90>\n"
+      "<pynndescent.pynndescent_.NNDescent object at 0x0000026AA958F690>\n"
      ]
     },
     {
@@ -2278,8 +2341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np"
    ]
   },
   {
@@ -2291,9 +2353,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:896: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "d:\\Documents\\Projects\\Machine-Learning-Basics\\.venv\\Lib\\site-packages\\huggingface_hub\\file_download.py:896: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2322,7 +2384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
